<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="100dp"
    android:background="@drawable/ic_green_rectangle"
    android:orientation="vertical"
    android:overlapAnchor="true">


    <TextView
        android:id="@+id/saveAvail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="10dp"
        android:text="@string/save_availability"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/yesbtn"
        android:layout_width="102dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="141dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="375dp"
        android:background="@drawable/ic_green_rectangle"
        android:insetTop="6dp"
        android:insetBottom="6dp"
        android:text="@string/yes"
        app:iconPadding="0dp" />

    <Button
        android:id="@+id/noCancelbtn"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignLeft="@+id/saveAvail"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="-66dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="375dp"
        android:background="@drawable/ic_green_rectangle"
        android:text="@string/no"
        app:iconPadding="0dp" />

</RelativeLayout>