<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentContainerMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Edit.ViewEditEmployeeFragment">

    <EditText
        android:id="@+id/edtTxtFName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/fill_first_name"
        android:includeFontPadding="false"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtTxtMName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/edtTxtPNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="204dp"
        android:ems="10"
        android:hint="@string/fill_phone_num"
        android:includeFontPadding="false"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edtTxtEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/txtTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/train"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtPNum" />

    <EditText
        android:id="@+id/edtTxtLName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/fill_last_name"
        android:includeFontPadding="false"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtTxtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <EditText
        android:id="@+id/edtTxtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/fill_email"
        android:includeFontPadding="false"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/edtTxtPNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/text_addemployees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686" />

    <EditText
        android:id="@+id/edtTxtMName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/fill_middle_name"
        android:includeFontPadding="false"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/edtTxtLName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <Switch
        android:id="@+id/trainCCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/trainOCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:includeFontPadding="true"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        android:text="@string/train_close"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="155dp" />

    <Switch
        android:id="@+id/trainOCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txtTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:includeFontPadding="true"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        android:text="@string/train_open"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="196dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="43dp" />

    <Button
        android:id="@+id/eAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_actions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toEndOf="@+id/trainOCheck"
        app:layout_constraintTop_toBottomOf="@+id/text_addemployees"
        app:layout_constraintVertical_bias="0.764" />

    <Button
        android:id="@+id/btnDefAvail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Def. Avail."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838" />

    <TextView
        android:id="@+id/txtVEEmailWarn"
        android:layout_width="90dp"
        android:layout_height="19dp"
        android:text="@string/required_field"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVELNameWarn"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/txtVEEmailVal"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/invalid_email"
        android:textSize="12dp"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVELNameWarn"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/txtVEPNumWarn"
        android:layout_width="90dp"
        android:layout_height="19dp"
        android:text="@string/required_field"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVEEmailWarn"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/txtVELNameWarn"
        android:layout_width="90dp"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:text="@string/required_field"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVEFNameWarn"
        app:layout_constraintVertical_bias="0.178" />

    <TextView
        android:id="@+id/txtVEPNumWarnFormat"
        android:layout_width="102dp"
        android:layout_height="21dp"
        android:layout_marginBottom="85dp"
        android:text="@string/phone_format"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVEEmailWarn"
        app:layout_constraintVertical_bias="0.168" />

    <TextView
        android:id="@+id/txtVEFNameWarn"
        android:layout_width="90dp"
        android:layout_height="19dp"
        android:text="@string/required_field"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="@+id/edtTxtFName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

</androidx.constraintlayout.widget.ConstraintLayout>